syntax = "proto3";

package protobuf.opencb;

option java_package = "org.opencb.biodata.models.variant.protobuf";
option java_outer_classname = "VariantAnnotationProto";
option java_generate_equals_and_hash = true;
//option java_multiple_files = true;

import "protobuf/opencb/common.proto";
import "protobuf/opencb/gene.proto";

// enum ExpressionCall in common.proto

message ClinVar {
    string accession = 1;
    string clinical_significance = 2;
    repeated string traits = 3;
    repeated string geneNames = 4;
    string review_status = 5;
}

message Gwas {
    string snpIdCurrent = 1;
    repeated string traits = 2;
    double risk_allele_frequency = 3;
    string reported_genes = 4;
}

message Cosmic {
    string mutation_id = 1;
    string primary_site = 2;
    string site_subtype = 3;
    string primary_histology = 4;
    string histology_subtype = 5;
    string sample_source = 6;
    string tumour_origin = 7;
    string gene_name = 8;
    string mutation_somatic_status = 9;
}

message Germline {
    string source = 1;
    string accession = 2;
    string clinical_significance = 3;
    string phenotype = 4;
    string disease = 5;
    string review_status = 6;
    repeated string gene_names = 7;
    repeated string protein_names = 8;
    string penetrance = 9;
    string heritance_model = 10;
    repeated string bibliography = 11;
    repeated string drugs = 12;
}

message Somatic {
    string source = 1;
    string accession = 2;
    string primary_site = 3;
    string site_subtype = 4;
    string primary_histology = 5;
    string histology_subtype = 6;
    string sample_source = 7;
    string tumour_origin = 8;
    string mutation_somatic_status = 9;
    string review_status = 10;
    repeated string gene_names = 11;
    repeated string protein_names = 12;
    repeated string bibliography = 13;
    repeated string drugs = 14;
}

message VariantTraitAssociation {
    repeated ClinVar clinvar = 1;
    repeated Gwas gwas = 2;
    repeated Cosmic cosmic = 3;
    repeated Germline germline = 4;
    repeated Somatic somatic = 5;
}

// message GeneDrugInteraction in common.proto
// message Expression in common.proto

//message GeneTraitAssociation {
//    string id = 1;
//    string name = 2;
//    string hpo = 3;
//    float score = 4;
//    int32 number_of_pubmeds = 5;
//    repeated string association_types = 6;
//    repeated string sources = 7;
//    string source = 8;
//}

message PopulationFrequency {
    string study = 1;
    string population = 2;
    string ref_allele = 3;
    string alt_allele = 4;
    float ref_allele_freq = 5;
    float alt_allele_freq = 6;
    float ref_hom_genotype_freq = 7;
    float het_genotype_freq = 8;
    float alt_hom_genotype_freq = 9;
}

message SequenceOntologyTerm {
    string accession = 1;
    string name = 2;
}

message ProteinFeature {
    string id = 1;
    int32 start = 2;
    int32 end = 3;
    string type = 4;
    string description = 5;
}

message Score {
    double score = 1;
    string source = 2;
    string description = 3;
}

message ProteinVariantAnnotation {
    string uniprot_accession = 1;
    string uniprot_name = 2;
    int32 position = 3;
    //string aaChange = 4;
    string reference = 5;
    string alternate = 6;
    string uniprot_variant_id = 7;
    string functional_description = 8;
    repeated Score substitution_scores = 9;
    repeated string keywords = 10;
    repeated ProteinFeature features = 11;
}

message ExonOverlap {
    string number = 1;
    float percentage = 2;
}

message ConsequenceType {
    string gene_name = 1;
    string ensembl_gene_id = 2;
    string ensembl_transcript_id = 3;
    string strand = 4;
    string biotype = 5;
    repeated ExonOverlap exon_overlap = 6;
    repeated string transcript_annotation_flags = 7;
    int32 c_dna_position = 8;
    int32 cds_position = 9;
    string codon = 10;
    ProteinVariantAnnotation protein_variant_annotation = 11;
    repeated SequenceOntologyTerm sequence_ontology_terms = 12;
}

message Repeat {
    string id = 1;
    string chromosome = 2;
    int32 start = 3;
    int32 end = 4;
    int32 period = 5;
    float copy_number = 6;
    float percentage_match = 7;
    float score = 8;
    string sequence = 9;
    string source = 10;
}

message Cytoband {
    string stain = 1;
    string name = 2;
    int32 start = 3;
    int32 end = 4;
}

message VariantAnnotation {
    string chromosome = 1;
    int32 start = 2;
    int32 end = 3;
    string reference = 4;
    string alternate = 5;
    string ancestral_allele = 6;
    string id = 7;

    message Xref {
        string id = 1;
        string source = 2;
    }
    repeated Xref xrefs = 8;
    repeated string hgvs = 9;
    string display_consequence_type= 10;
    repeated ConsequenceType consequence_types = 11;
    repeated PopulationFrequency population_frequencies = 12;
    string minorAllele = 13;
    float minorAlleleFreq = 14;
    repeated Score conservation = 15;
    repeated Expression gene_expression = 16;
    repeated GeneTraitAssociation gene_trait_association = 17;
    repeated GeneDrugInteraction gene_drug_interaction = 18;
    VariantTraitAssociation trait_association = 19;
    repeated Score functional_score = 20;
    repeated Repeat repeat = 21;
    repeated Cytoband cytoband = 22;

    message AdditionalAttribute {
        map<string, string> attribute = 1;
    }
    map<string, AdditionalAttribute> additional_attributes = 23;
}
